--- a/booking/client/public/index.html
+++ b/booking/client/public/index.html
@@ -25,6 +25,10 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v18.0&appId=1007769707158538"
+    nonce="KgMOhqG5"></script>
   <div id="root"></div>
   <!--
       This HTML file is a template.
